...
            .onChange(of: searchConfig, perform: { newConfig in
                contacts.nsPredicate = Contact.filter(with: newConfig)
            })
            .onChange(of: sort, perform: { newSort in
                contacts.nsSortDescriptors = Contact.sort(order: newSort)
            })
            .navigationTitle("Contacts")
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button {
                        contactToEdit = .empty(context: provider.newContext)
                    } label: {
                        Image(systemName: "plus")
                            .font(.title3)
                            .fontDesign(.rounded)
                    }
                    .accessibilityIdentifier("createButton")
                    .accessibilityHint(Text("A sheet with a form will show up to allow you to create a new contact"))
                    
                }
                
                ToolbarItem(placement: .navigationBarLeading) {
                    Menu {
...
